--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,26 +18,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.0",
     "express": "^4.18.2",
-    "pino-http": "^8.3.2"
+    "pino-http": "^8.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.16",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "eslint": "^8.33.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.3",
-    "prisma": "^4.9.0",
+    "prisma": "^4.10.0",
     "rimraf": "^4.1.2",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "ts-node-dev": "^2.0.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
