--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,19 +1,10 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
-    "useDefineForClassFields": true,
     "lib": ["ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
+    "esModuleInterop": true,
     "baseUrl": "./src",
   },
   "include": ["src/**/*"],
