--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,60 +7,25 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "prepare": "npx simple-git-hooks || :"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@jest/types": "^29.3.1",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.7",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.5",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "@vitejs/plugin-react": "^3.0.1",
-    "babel-loader": "^9.1.2",
-    "eslint": "8.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.4",
+    "@vitejs/plugin-react": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.0",
-    "eslint-plugin-storybook": "^0.6.10",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3",
-    "simple-git-hooks": "^2.8.1",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write --loglevel=warn",
-      "eslint --fix --quiet"
-    ],
-    "src/**/*.css": [
-      "stylelint --fix --quiet"
-    ]
-  },
-  "simple-git-hooks": {
-    "pre-commit": "yarn run lint-staged"
+    "eslint-plugin-react": "^7.32.2",
+    "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom": "^29.4.2",
+    "stylelint": "^14.16.1",
+    "stylelint-config-recess-order": "^3.1.0",
+    "stylelint-config-standard": "^29.0.0",
+    "vite": "^4.1.1"
   }
 }
