--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/backend"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "preinstall": "npx -y only-allow npm"
   },
   "devDependencies": {
     "@jest/types": "^29.4.2",
