--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,11 +19,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.10.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pino-http": "^8.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "npm-run-all": "^4.1.5",
     "prisma": "^4.10.0",
