--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^4.10.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pino-http": "^8.3.3"
