--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="mysql://root:root@localhost:3306/mydb?schema=public"
+
+JWT_ACCESS_TOKEN_SECRET_KEY="ACCESS_TOKEN_SECRET_KEY"
+JWT_REFRESH_TOKEN_SECRET_KEY="REFRESH_TOKEN_SECRET_KEY"
+JWT_ACCESS_TOKEN_EXPIRES_IN="20s"
+JWT_REFRESH_TOKEN_EXPIRES_IN="20m"
