--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.3.3",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
