refactor: Use tsconfig paths in backend

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -6,6 +6,11 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "baseUrl": "./src",
+    "paths": {
+      "~/*": [
+        "./*"
+      ]
+    }
   },
   "include": ["src/**/*"],
 }
