--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn src/index.ts",
     "clean": "rimraf dist",
     "tsc": "tsc",
     "build": "npm-run-all clean tsc",
@@ -35,7 +35,8 @@
     "npm-run-all": "^4.1.5",
     "prisma": "^4.10.0",
     "rimraf": "^4.1.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
